jade news angular

--- a/front/src/main/webapp/index.html
+++ b/front/src/main/webapp/index.html
@@ -164,6 +164,9 @@
     <script src="bower_components/pickadate/lib/compressed/picker.date.js"></script>
     <script src="bower_components/pickadate/lib/compressed/translations/es_ES.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/controllers.js"></script>
     <script>
       $(window).bind("load", function() {
       
