--- a/front/src/main/webapp/news.html
+++ b/front/src/main/webapp/news.html
@@ -105,7 +105,7 @@
           <div class="container">
             <h2 class="date"><i class='fa fa-calendar-o'></i><span>Hoy</span>, 24 de Septiembre 2014</h2>
             <ul>
-              <li ng-repeat="new in newsb" class="element">
+              <li ng-repeat="new in newsa" class="element">
                 <header class="cf">
                   <div class="pic"><a href="#"><img src="img/news-thumbs/3.jpg"></a></div>
                   <div class="title"><a href="#">{{ new.titulo }}</a></div>
