Maqueta de cuestionarios, estilos preliminares

--- a/front/src/main/webapp/news.html
+++ b/front/src/main/webapp/news.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <section class="main-container">
-        <div class="main-container-overlay"></div>
+        <div class="main-container-overlay js-main-container-overlay"></div>
         <div class="panel-title">
           <div class="container">
             <h1>Actualidad en la industria</h1>
