--- a/front/src/main/webapp/index.html
+++ b/front/src/main/webapp/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <section class="main-container">
-        <div class="main-container-overlay"></div>
+        <div class="main-container-overlay js-main-container-overlay"></div>
         <div class="panel-header-summary">
           <div class="container">
             <div class="profile-info">
