--- a/front/src/main/webapp/login.html
+++ b/front/src/main/webapp/login.html
@@ -21,7 +21,7 @@
       <div class="title">
         <h3>Bienvenido</h3>
       </div>
-      <form action="http://infra1.cloudapp.net:8080/front-1.0-SNAPSHOT/api/v1/user/login" method="POST">
+      <form action="http://infra1.cloudapp.net:8080/api/v1/users" method="POST">
         <fieldset class="wi">
           <input type="text" name="identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
         </fieldset>
