--- a/front/src/main/webapp/login.html
+++ b/front/src/main/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.css">
     <link rel="stylesheet" href="bower_components/pickadate/lib/compressed/themes/default.date.css">
   </head>
-  <body>
+  <body ng-app="sampleApp">
     <div class="login-head">
       <h1>site</h1>
       <h2>Sistema de Inteligencia y Tecnología Empresarial</h2>
@@ -21,21 +21,23 @@
       <div class="title">
         <h3>Bienvenido</h3>
       </div>
-      <form action="http://infra1.cloudapp.net:8080/api/v1/users" method="POST">
+      <form ng-controller="loginController" ng-submit="login()">
         <fieldset class="wi">
-          <input type="text" name="identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
+          <input type="text" ng-model="formData.identity" name="identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
         </fieldset>
         <fieldset class="wi">
-          <input type="password" name="password" placeholder="Contraseña"><i class="fa fa-lock"></i>
+          <input type="password" ng-model="formData.password" name="password" placeholder="Contraseña"><i class="fa fa-lock"></i>
         </fieldset>
         <fieldset class="loader on"><i class="fa fa-spinner fa-spin"></i></fieldset>
         <fieldset class="action">
           <button type="submit" class="btn">Ingresar al SITE<i class="fa fa-chevron-right"></i></button>
         </fieldset>
-        <fieldset class="error"><span>Nombre del error</span></fieldset>
+        <fieldset class="error"><span>{{ error }}</span></fieldset>
       </form>
     </div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/loginController.js"></script>
   </body>
 </html>
