sppiner login angular

--- a/front/src/main/webapp/login.html
+++ b/front/src/main/webapp/login.html
@@ -28,7 +28,7 @@
         <fieldset class="wi">
           <input type="password" ng-model="formData.password" name="password" placeholder="Contraseña"><i class="fa fa-lock"></i>
         </fieldset>
-        <fieldset class="loader on"><i class="fa fa-spinner fa-spin"></i></fieldset>
+        <fieldset class="loader {{ load }}"><i class="fa fa-spinner fa-spin"></i></fieldset>
         <fieldset class="action">
           <button type="submit" class="btn">Ingresar al SITE<i class="fa fa-chevron-right"></i></button>
         </fieldset>
