--- a/front/src/main/webapp/login.html
+++ b/front/src/main/webapp/login.html
@@ -14,14 +14,14 @@
   </head>
   <body>
     <div class="login-head">
-      <h1>site</h1>
+      <h1>aie</h1>
       <h2>Sistema de Inteligencia y Tecnología Empresarial</h2>
     </div>
     <div class="login-form">
       <div class="title">
         <h3>Bienvenido</h3>
       </div>
-      <form action="http://infra1.cloudapp.net:8080/front-1.0-SNAPSHOT/api/v1/user/login" method="POST">
+      <form action="index.html">
         <fieldset class="wi">
           <input type="text" name="identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
         </fieldset>
@@ -30,9 +30,8 @@
         </fieldset>
         <fieldset class="loader on"><i class="fa fa-spinner fa-spin"></i></fieldset>
         <fieldset class="action">
-          <button type="submit" class="btn">Ingresar al SITE<i class="fa fa-chevron-right"></i></button>
+          <button type="submit" class="btn">Ingresar</button>
         </fieldset>
-        <fieldset class="error"><span>Nombre del error</span></fieldset>
       </form>
     </div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
