--- a/front/src/main/webapp/question-2.html
+++ b/front/src/main/webapp/question-2.html
@@ -51,8 +51,8 @@
         <div class="panel-question-tabs">
           <div class="container">
             <ol>
-              <li class="selected"><a href="question.html"><span>Economía</span></a></li>
-              <li><a href="question-2.html"><span>Producción</span></a></li>
+              <li><a href="question.html"><span>Economía</span></a></li>
+              <li class="selected"><a href="question-2.html"><span>Producción</span></a></li>
               <li><a href="#"><span>Comercial</span></a></li>
               <li><a href="#"><span>Innovación y Tecnología</span></a></li>
               <li><a href="#"><span>Administración</span></a></li>
@@ -64,8 +64,8 @@
           <div class="container">
             <div class="panel-question-container">
               <header>
-                <h2>Economía</h2>
-                <p>12 de 13 preguntas contestadas</p>
+                <h2>Producción</h2>
+                <p>4 de 17 preguntas contestadas</p>
               </header>
               <fieldset>
                 <dl class="question">
@@ -122,7 +122,7 @@
             </div>
             <div class="action">
               <div class="half">
-                <div class="left"><br></div>
+                <div class="left"><a href="question.html" class="btn alt"><i class='fa fa-chevron-left'></i> Anterior</a></div>
                 <div class="right"><a href="question-2.html" class="btn">Siguiente <i class='fa fa-chevron-right'></i></a></div>
               </div>
             </div>
