--- a/front/src/main/webapp/login.html
+++ b/front/src/main/webapp/login.html
@@ -23,12 +23,15 @@
       </div>
       <form ng-controller="loginController" ng-submit="login()">
         <fieldset class="wi">
-          <input type="text" ng-model="formData.identity" name="identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
+          <input type="text" ng-model="formData.identity" placeholder="Nombre de Usuario"><i class="fa fa-user"></i>
         </fieldset>
         <fieldset class="wi">
-          <input type="password" ng-model="formData.password" name="password" placeholder="Contraseña"><i class="fa fa-lock"></i>
+          <input type="password" ng-model="formData.password" placeholder="Contraseña"><i class="fa fa-lock"></i>
         </fieldset>
-        <fieldset class="loader {{ load }}"><i class="fa fa-spinner fa-spin"></i></fieldset>
+        <fieldset class="loader">
+          i.fa.fa-spinner.fa-spin
+          
+        </fieldset>
         <fieldset class="action">
           <button type="submit" class="btn">Ingresar al SITE<i class="fa fa-chevron-right"></i></button>
         </fieldset>
