--- a/front/src/main/webapp/index.html
+++ b/front/src/main/webapp/index.html
@@ -23,8 +23,8 @@
       <input type="checkbox" id="activate-alerts" class="activate-alerts">
       <nav class="main-nav">
         <ul class="nav-listing">
-          <li class="selected"><a href="#"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
-          <li><a href="#"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
+          <li class="selected"><a href="index.html"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
+          <li><a href="news.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
           <li><a href="#"><span class="icon"></span><span class="tag">Perfil</span></a></li>
           <li><a href="#"><span class="icon"></span><span class="tag">Alertas y notifiaciones</span></a></li>
           <li><a href="#"><span class="icon"></span><span class="tag">Inteligencia comercial</span></a></li>
